# MiniCon

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
src/: __init__.py  cli.py  constants.py
src/container/: __init__.py  manager.py  model.py  registry.py
src/namespace/: __init__.py  orchestrator.py
src/namespace/handlers/: __init__.py  mount_namespace.py  pid_namespace.py  user_namespace.py  uts_namespace.py
src/utils/: security.py  system.py
tests/: __init__.py  conftest.py  test_cli.py
tests/container/: __init__.py  test_manager.py  test_model.py  test_registry.py
tests/integration/: test_container_lifecycle.py  test_security_integration.py  test_security_validation.py
tests/namespace/: __init__.py  test_orchestrator.py
tests/namespace/handlers/: __init__.py  test_mount_namespace.py  test_pid_namespace.py  test_user_namespace.py  test_uts_namespace.py
tests/utils/: test_security.py
