[project]
name = "minicon"
version = "0.1.0"
description = "A lightweight container implementation in Python"
authors = [
    {name = "Benjamin Idewor",email = "benjaminidewor@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
